...
    <string name="value_must_be_a_guid">Value must be a valid GUID</string>
    <string name="delete_attachment_title">Delete Attachment?</string>
    <string name="delete_attachment_confirmation">Are you sure you want to delete this attachment?</string>
    <string name="download_failed">Unable to download this file.</string>
    <string name="file_size_exceeds_limit">File Size Exceeds Limit</string>
    <string name="unsupported_file_type">Unsupported File Type</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="none_selected">None Selected</string>
    <string name="the_form_has_validation_errors">The form has validation errors</string>
    <string name="the_form_has_edits">The form has edits</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="no_associations_found">No associations to show</string>
    <string name="terminal">Terminal</string>
    <string name="terminal_with_value">Terminal : %1$s</string>
    <string name="content_visible">Content Visible</string>
    <string name="percent_along">Percent Along</string>
    <string name="from_element">From Element</string>
    <string name="to_element">To Element</string>
    <string name="association_type">Association Type</string>
    <string name="remove_association">Remove Association</string>
    <string name="remove_association_tooltip">Only removes the association. The feature remains.</string>
    <string name="remove">Remove</string>
    <string name="association_settings">Association Settings</string>
    <string name="percent_along_edge">%1$d %%</string>
    <string name="visible_content">Visible Content</string>
...
    <string name="containment_visible_value">Visible: %1$s</string>
    <string name="from_network_data_source">From Network Data Source</string>
    <string name="on_map">On Map</string>
    <string name="network_data_source">Network Data Source</string>
    <string name="available_asset_types">Available Asset Types</string>
    <string name="count">Count %1$d</string>
    <string name="new_association">New Association</string>
    <string name="add">Add</string>
    <string name="failed_to_create_association">Failed to create association. %1$s</string>
    <string name="available_features">%1$d Available Features</string>
    <string name="loading2">Loading..</string>
    <plurals name="you_have_errors_that_must_be_fixed_before_saving">
        <item quantity="zero">You have %1$d errors that must be fixed before saving.</item>
        <item quantity="one">You have %1$d error that must be fixed before saving.</item>
...
    <string name="choose_to_add">Choose to add</string>
    <string name="no_features_found">No features found</string>
    <string name="refine_your_search_tip">Refine your search or choose a different Network Source.</string>
    <string name="select_terminal">Select Terminal</string>
    <string name="show_on_map">Show on Map</string>
    <string name="more_information">More Information</string>
    <string name="add_associations">Add Associations</string>
    <string name="filter_features">Filter Features</string>
    <string name="apply">Apply</string>
    <string name="add_condition">Add Condition</string>
    <string name="no_conditions_added">No conditions added.</string>
    <string name="show_features_that_meet_all_the_conditions">Show features that meet all the conditions.</string>
    <string name="condition">Condition</string>
...
